--- a/app/src/main/res/layout/activity_personal_ingredient.xml
+++ b/app/src/main/res/layout/activity_personal_ingredient.xml
@@ -1,223 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vincentzhu.testapplication.PersonalIngredient"
-    tools:layout_editor_absoluteY="25dp"
-    tools:layout_editor_absoluteX="0dp">
+
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="368dp"
-        android:layout_height="56dp"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ingredient Name"
-        android:textAlignment="center"
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="64dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentStart="true">
 
-    <EditText
-        android:id="@+id/ing_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:layout_below="@+id/ing_name"
-        android:layout_centerHorizontal="true"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/ing_name"
-        android:layout_marginTop="6dp"
-        app:layout_constraintTop_toBottomOf="@+id/ing_name"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/ing_name" />
+            <EditText
+                android:id="@+id/ing_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="80dp"
+                android:hint="Ingredient Name..."
+                android:ems="10"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="1"
+                android:maxLength="40"/>
 
-    <EditText
-        android:id="@+id/ing_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_gravity="center"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/ing_name"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/ing_name"
-        android:layout_marginTop="38dp"
-        app:layout_constraintTop_toBottomOf="@+id/ing_name"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/ing_name" />
+            <EditText
+                android:id="@+id/ing_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:hint="Description..."
+                android:ems="10"
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_alignTop="@+id/ing_name"
+                android:maxLines="1"/>
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Type"
-        android:layout_below="@+id/ing_description"
-        android:layout_centerHorizontal="true"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ing_history"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/spinner_ing_type" />
+            <EditText
+                android:id="@+id/ing_history"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="History..."
+                android:ems="10"
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_below="@+id/ing_description"
+                android:layout_alignStart="@+id/ing_description"
+                android:maxLines="1"/>
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="History"
-        android:layout_alignStart="@+id/textView8"
-        android:layout_alignEnd="@+id/textView8"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/ing_description"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text=" Type :"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="230dp" />
 
-    <EditText
-        android:id="@+id/ing_history"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_below="@+id/textView7"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/ing_description"
-        android:layout_marginTop="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/ing_description"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/ing_description" />
+            <Spinner
+                android:id="@+id/spinner_ing_type"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                style="@style/spinner_style"
+                android:layout_marginTop="220dp"
+                android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Season"
-        android:layout_below="@+id/ing_history"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="33dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="164dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="163dp"
-        app:layout_constraintLeft_toLeftOf="@+id/spinner_ing_season"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text="Season :"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="290dp" />
 
-    <Button
-        android:id="@+id/firebase_ing_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="38dp"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="33dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+            <Spinner
+                android:id="@+id/spinner_ing_season"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                style="@style/spinner_style"
+                android:layout_marginTop="280dp"
+                android:layout_centerHorizontal="true"/>
 
-    <Spinner
-        android:id="@+id/spinner_ing_season"
-        android:layout_width="116dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="41dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/firebase_ing_btn"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_ing_type"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="31dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+            <ImageView
+                android:id="@+id/imageDisplay_ing"
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="340dp"
+                />
 
-    <Spinner
-        android:id="@+id/spinner_ing_type"
-        android:layout_width="0dp"
-        android:layout_height="42dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintRight_toRightOf="@+id/spinner_ing_season"
-        android:layout_marginTop="25dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintLeft_toLeftOf="@+id/firebase_ing_btn"
-        app:layout_constraintTop_toTopOf="@+id/textView6" />
+            <android.support.design.widget.BottomNavigationView
+                android:theme="@style/NavigationTheme"
+                android:id="@+id/ing_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:itemBackground="@color/colorPrimary"
+                app:itemIconTint="@drawable/nav_item_color"
+                app:itemTextColor="@drawable/nav_item_color"
+                app:menu="@menu/ingredient_menu" />
 
-    <Button
-        android:id="@+id/pic_btn"
-        android:layout_width="168dp"
-        android:layout_height="52dp"
-        android:text="Browse Image"
-        android:layout_marginEnd="25dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_ing_season"
-        android:layout_marginBottom="29dp"
-        android:layout_marginRight="25dp"
-        app:layout_constraintVertical_bias="0.0" />
+        </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/imageDisplay"
-        android:layout_width="0dp"
-        android:layout_height="144dp"
-        android:layout_gravity="center"
-        android:layout_centerVertical="true"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/pic_btn"
-        android:layout_marginTop="90dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="93dp"
-        app:layout_constraintLeft_toLeftOf="@+id/pic_btn" />
-</android.support.constraint.ConstraintLayout>
+
+       </ScrollView>
+
+    </RelativeLayout>
